# tcmalloc-rs

./: Cargo.toml  README.md  build.rs  wrapper.h
.github/workflows/: publish.yml
src/: bindings.rs  lib.rs
