[package]
authors = ["Navid <yaa110@gmail.com>"]
build = "build.rs"
categories = ["memory-management", "api-bindings"]
description = "Rust FFI bindings to tcmalloc"
documentation = "https://docs.rs/tcmalloc2"
edition = "2021"
homepage = "https://github.com/yaa110/tcmalloc-rs"
keywords = ["tcmalloc", "allocator"]
license = "MIT OR Apache-2.0"
name = "tcmalloc2"
readme = "README.md"
repository = "https://github.com/yaa110/tcmalloc-rs"
version = "0.1.2+2.13"

[build-dependencies]
bindgen = "0.68"
num_cpus = "1"
